--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
         <div class="container">
             <h2>Gallery</h2>
             <div class="gallery-grid">
-                <img src="https://source.unsplash.com/400x300/?tree,forest" alt="Tree">
-                <img src="https://source.unsplash.com/400x300/?planting,tree" alt="Planting Trees">
-                <img src="https://source.unsplash.com/400x300/?city,green" alt="Green City">
-                <img src="https://source.unsplash.com/400x300/?nature,park" alt="Park">
+                <img src="TREE.JPG">
+                <img src="treeplanting.jpeg">
+                <img src="greencity.jpeg">
+                <img src="park.jpeg">
             </div>
         </div>
     </section>
@@ -95,3 +95,4 @@
     </footer>
 </body>
 </html>
+
